# investors-take-home

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/backend/: app.py  dependencies.py  domain.py  investors_store.py  response.py
backend/tests/: conftest.py  test_acceptance.py
database/: Dockerfile  Makefile  changelog.yml  pyproject.toml  seed.py
database/changelog/: 001-create-table-investory-type.sql  002-create-table-country.sql  003-create-table-investor.sql  004-create-table-asset-class.sql  005-create-table-currency.sql  006-create-table-commitment.sql
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite-env.d.ts  vite.config.ts
frontend/src/: api.ts  config.ts  index.css  main.tsx  numbers.ts
frontend/src/components/ui/: breadcrumb.tsx
frontend/src/routes/: commitments.tsx  investors.tsx  root.tsx
